crates/aikit-tui/tests/snapshots/render__ascii_fallback.snap
---
source: crates/aikit-tui/tests/render.rs
expression: ascii.clone()
---
┌ AIKit palette · payments · session ──────────────────────────────────────────────────────────────────────────────────┐
│/ o                                                                                                                   │
│>  +* P deploy                   Test script depl… script    reviewed  script/ops/deploy@rev-sc                       │
│   .-   boundary                 Test hook bounda… hook      unseen    State: active                                  │
│   .-   core                     Test script core. script    reviewed  Trust: reviewed                                │
│   .-   cargo-nextest            Test script carg… script    reviewed  Maturity: draft                                │
│                                                                       Selected by:                                   │
│                                                                         enabled by project .aikit/project.toml       │
│                                                                       Required by:                                   │
│                                                                         none                                         │
│                                                                       Dependencies:                                  │
│                                                                         none                                         │
│                                                                       Projection:                                    │
│                                                                         shell                                        │
│                                                                         claude-code                                  │
│                                                                       Activation means: exported into the contextual │
│4 capabilities · writing to session S · Ctrl-T tree · ? for keys                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
