crates/aikit-tui/tests/snapshots/render__error_recovery.snap
---
source: crates/aikit-tui/tests/render.rs
expression: "frame(&state, 120, 18)"
---
┌ AIKit palette · payments · session ──────────────────────────────────────────────────────────────────────────────────┐
│/ uses-lib                                                                                                            │
│Staged                                                                                                                │
│  enable   script/app/uses-lib                                                                                        │
│Comes with                                                                                                            │
│  + script/lib/core                                                                                                   │
│Clients                                                                                                               │
│  Claude: live                                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│the session overlay moved under this apply; nothing was written  [generation.stale_base]                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
